<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgprimary"
    tools:context=".SuccessRegisterAct">

    <ImageView
        android:id="@+id/ic_sc"
        android:layout_width="287dp"
        android:layout_height="330dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/icon_success_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_sc"
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/mregular"
        android:text="@string/you_did_it"
        android:textAlignment="center"
        android:textColor="@color/blacktext"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_sc" />

    <TextView

        android:id="@+id/subtxt_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/mlight"
        android:text="@string/notes_S_R"
        android:textAlignment="center"
        android:textColor="@color/grayprimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sc" />

    <Button
        android:id="@+id/btn_explore"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/explore"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtxt_sc" />


</androidx.constraintlayout.widget.ConstraintLayout>