<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary_blue"
    tools:context=".SignInAct">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="184dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/applogowhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="366dp"
    android:layout_height="439dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="24dp"
    android:background="@drawable/bg_layout_white"
    android:orientation="vertical"
    android:paddingTop="30sp"
    android:paddingBottom="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView3"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/mlight"
            android:text="@string/username_label"
            android:textColor="@color/grayprimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/xusername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_edit"
            android:fontFamily="@font/mmedium"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:textColor="@color/blacktext"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/mlight"
            android:text="@string/password_label"
            android:textColor="@color/grayprimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/xpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_edit"
            android:fontFamily="@font/mmedium"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:textColor="@color/blacktext"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/signin"
        android:textColor="#FFF"
        android:textSize="20sp" />

</LinearLayout>

    <TextView
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mlight"
        android:text="@string/create_new_account"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>